--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -177,36 +177,9 @@
   <br>
   <hr>
   <a href="editor">
-    <button type="button" class="btn btn-info2" style="margin-bottom: 20px;">CREATE CHARACTER
+    <button type="button" class="btn btn-success">CREATE CHARACTER
     </button>
   </a>
   <hr>
 
-  <script>
-    //  ----------CAROUSELS -----------------
-
-    $(document).ready(function () {
-      $("#myCarousel").on("slide.bs.carousel", function (e) {
-        var $e = $(e.relatedTarget);
-        var idx = $e.index();
-        var itemsPerSlide = 3;
-        var totalItems = $(".carousel-item").length;
-
-        if (idx >= totalItems - (itemsPerSlide - 1)) {
-          var it = itemsPerSlide - (totalItems - idx);
-          for (var i = 0; i < it; i++) {
-            // append slides to end
-            if (e.direction == "left") {
-              $(".carousel-item")
-                .eq(i)
-                .appendTo(".carousel-inner");
-            } else {
-              $(".carousel-item")
-                .eq(0)
-                .appendTo($(this).find(".carousel-inner"));
-            }
-          }
-        }
-      });
-    });
-  </script>
+  <script type="text/javascript" src="../scripts/index.js"></script>
