--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
 
     <!---------------------- Footer ---------------------->
     <footer class="footer">
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin: 10px">
 
             <br>
             <h5>This site is Under Construction</h5>
