--- a/views/stats.handlebars
+++ b/views/stats.handlebars
@@ -9,36 +9,36 @@
                 <li role="presentation" class="active">
                     <a href="#traits" role="tab" data-toggle="tab">
                         <h3>TRAITS</h3>
-                        <p><img src="../images/person.png"></p>
+                        <p><img src="./images/person.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#feats" role="tab" data-toggle="tab">
                         <h3>FEATS</h3>
-                        <p><img src="../images/trophy.png"></p>
+                        <p><img src="./images/trophy.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#skills" role="tab" data-toggle="tab">
                         <h3>SKILLS</h3>
-                        <p><img src="../images/anvil.png"></p>
+                        <p><img src="./images/anvil.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#items" role="tab" data-toggle="tab">
                         <h3>ITEMS</h3>
-                        <p><img src="../images/sword.png"></p>
+                        <p><img src="./images/sword.png"></p>
                     </a>
                 </li>
                 <li role="presentation">
                     <a href="#spells" role="tab" data-toggle="tab">
                         <h3>SPELLS</h3>
-                        <p><img src="../images/magic.png"></p>
+                        <p><img src="./images/magic.png"></p>
                     </a>
                 <li role="presentation">
                     <a href="#charSheet" role="tab" data-toggle="tab">
                         <h3>Overview</h3>
-                        <p><img src="../images/heart.png"></p>
+                        <p><img src="./images/heart.png"></p>
                     </a>
                 </li>
                 </li>
@@ -52,7 +52,7 @@
             <div class="tab-content service-tab-content">
                 <div class="tab-pane active" id="traits">
                     <div class="col-sm-4">
-                        <img src="https://via.placeholder.com/400x300?text=Hi+Kelli+!+Put+Image+here" alt=""
+                        <img src="./images/stats-image1.jpg" alt=""
                             class="img-responsive tab-image-ex-gap" style="padding: 20px;">
                     </div>
                     <div class="col-sm-8">
@@ -71,7 +71,7 @@
         </container>
         <div class="tab-pane" id="feats">
             <div class="col-sm-4">
-                <img src="https://via.placeholder.com/400x300?text=Hi+Kelli+!+Put+Image+here" alt=""
+                <img src="./images/stats-image2.jpg" alt=""
                     class="img-responsive tab-image-ex-gap" style="padding: 20px;">
             </div>
             <div class="col-sm-8">
@@ -95,7 +95,7 @@
         </div>
         <div class="tab-pane" id="skills">
             <div class="col-sm-4">
-                <img src="https://via.placeholder.com/400x300?text=Hi+Kelli+!+Put+Image+here" alt=""
+                <img src="./images/stats-image3.jpg" alt=""
                     class="img-responsive tab-image-ex-gap" style="padding: 20px;">
             </div>
             <div class="col-sm-8">
