--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,8 +22,8 @@
     <!--------------------- Jumbotron ------------------->
     <section id="home" class="jumbotron  jumbotron-fluid" style="text-align: center;">
         <div class="container">
-            <img class="logo"
-                src="../images/pathfinder-Logo.png" alt="logo">
+            <a href="/create"><img class="logo"
+                src="../images/pathfinder-Logo.png" alt="logo"></a>
             <!-- <div class="knockout">PATHFINDER</div>
             <div class="knockout" id="subtitle">Character Builder</div> -->
         </div>
